package td2.systeme;

public enum ComposantType {
    FICHIER, REPERTOIRE
}
