package td2.systeme;

public class Directory {
    private String name;
    private ComposantType type;

    public Directory(){
        this.name=name;
        this.type= type;
    }

}
