package td2.systeme;

public class Owner {
    private String name;
    public Owner(){
        this.name = name;
    }

    public String getOwner(){
        return this.name;
    }
}
